--- a/README.Rmd
+++ b/README.Rmd
@@ -14,42 +14,13 @@ knitr::opts_chunk$set(
 ```
 # fvoa
 
-The goal of fvoa is to ...
+The goal of fvoa is to scrape fantasy information from ESPN and Yahoo Fantasy Football and 
+    can uses data to compare teams, simulate seasons, and create visuals. Essentially everything 
+    you need to build analytics behind your trash-talking.
 
-## Installation
-
-You can install the released version of fvoa from [CRAN](https://CRAN.R-project.org) with:
-
-``` r
-install.packages("fvoa")
-```
-
-And the development version from [GitHub](https://github.com/) with:
+You can install te development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("scottfrechette/fvoa")
 ```
-## Example
-
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
